# ffmpeg_study

./: .gitignore
aac/: CMakeLists.txt  main.c
ffmpeg_api/decoder_api_test/: ADTS.cpp  ADTS.h  CMakeLists.txt  MediaDemuxerCore.cpp  MediaDemuxerCore.h  main.cpp
ffmpeg_api/decoder_api_test/video/: Titanic.ts
ffmpeg_api/metadata_test/: CMakeLists.txt  main.c
ffmpeg_example/remuxing/: CMakeLists.txt
flv/: CMakeLists.txt  main.c
h264/: CMakeLists.txt  main.c
h264Decoder/: AnnexBReader.cpp  AnnexBReader.h  BitStream.cpp  BitStream.h  CMakeLists.txt  EBSP.cpp  EBSP.h  Nalu.cpp  Nalu.h  NaluPPS.cpp  NaluPPS.h  NaluSPS.cpp  NaluSPS.h  RBSP.cpp  RBSP.h  main.cpp
pcm/: CMakeLists.txt  main.c
udp-rtp/: CMakeLists.txt  main.c  rtp.h  ts.c  ts.h
yuv/: CMakeLists.txt  main.c
